# workhs

./: .gitignore  .gitmodules  LICENSE  MyProgram.hs  README.md  engager.cabal  stack.yaml  workhs.cabal
examples/HelloNode/: Main.hs
haskell-frontmatter-cheapskate/: frontmatter-cheapskate.cabal
src/: Engager.hs  Workhs.hs
src/Engager/: Core.hs  Exercise.hs  Interface.hs
src/Workhs/: Core.hs  Exercise.hs  Interface.hs
templates/: workhs-hspec-template.cabal
web-driver/: Makefile  reactive-banana.hs
web-driver/fay/: stuff-ccjs.js  stuff.js
web-driver/ghcjs/: lib.js  out.js  out.stats  rts.js  stuff-ccjs.js  stuff.js
web-driver/haste/: Main.jsmod  stuff-ccjs.js  stuff.js
