name:                engager
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable engager
  main-is:             Main.hs    
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  default-language:    Haskell2010