name:                engager
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.18

library
  exposed-modules:     Engager
  build-depends:       base >=4.7 && <4.8
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010