name:                engager
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.18

library
  exposed-modules:     Engager.Core
                     , Engager.Exercise
  other-modules:       Engager.Interface
  build-depends:       base                 >=4.7 && <4.8
                     , text                 >=1.2 && <1.3
                     , vty-ui               >=1.8 && <1.9
                     , vty                  >=5.2 && <5.3
                     , containers           >=0.5 && <0.6
                     , optparse-applicative >=0.11 && <0.12
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010