name:                workhs
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.18

library
  exposed-modules:     Workhs
  build-depends:       ansi-terminal
                     , aeson
                     , base >=4 && <5
                     , bytestring
                     , cheapskate
                     , cheapskate-terminal
                     , conduit
                     , conduit-extra
                     , data-default
                     , filepath >= 1.4.0.0
                     , frontmatter
                     , here
                     , lens >= 4.12.3
                     , lens-aeson
                     , list-prompt
                     , process
                     , resourcet >= 1.1.7
                     , template-haskell
                     , temporary
                     , text
                     , th-lift-instances
                     , transformers >= 0.4.2.0
  hs-source-dirs:      src
  ghc-options:         -O2 -threaded
  default-language:    Haskell2010

executable learnyouhaskell
  main-is:             LearnYouHaskell.hs
  build-depends:       ansi-terminal
                     , aeson
                     , base >=4 && <5
                     , bytestring
                     , cheapskate
                     , cheapskate-terminal
                     , conduit
                     , conduit-extra
                     , filepath >= 1.4.0.0
                     , frontmatter
                     , here
                     , lens >= 4.12.3
                     , lens-aeson
                     , process
                     , resourcet >= 1.1.7
                     , template-haskell
                     , temporary
                     , th-lift-instances
                     , transformers >= 0.4.2.0
                     , workhs
  hs-source-dirs:      bin
  ghc-options:         -O2 -threaded
  default-language:    Haskell2010
