name:                workhs-hspec-template
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable workhs-hspec-template
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
  default-language:    Haskell2010

test-suite hspec
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  build-depends: base
               , hspec
               , QuickCheck
  hs-source-dirs: test
  default-language: Haskell2010
